<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.ajls</groupId>
    <artifactId>MegaWallsClasses</artifactId>
    <version>1.5-SNAPSHOT</version>
    <packaging>jar</packaging>

    <name>MegaWallsClasses</name>

    <properties>
        <java.version>1.8</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>21</source>
                    <target>21</target><compilerArgs>--enable-preview</compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.2.4</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                    </execution>

<!--                    <execution>-->
<!--                        <configuration>-->
<!--                            <classifier>javadoc</classifier>-->
<!--                        </configuration>-->
<!--                    </execution>-->

                </executions>
            </plugin>
        </plugins>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
            </resource>
        </resources>
    </build>

    <repositories>
        <!--      <repository>-->
        <!--          <id>spigotmc-repo</id>-->
        <!--          <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>-->
        <!--      </repository>-->
        <repository>
            <id>sonatype</id>
            <url>https://oss.sonatype.org/content/groups/public/</url>
        </repository>
        <repository>
            <id>dmulloy2-repo</id>
            <url>https://repo.dmulloy2.net/repository/public/</url>
        </repository>
        <repository>
            <id>papermc</id>
            <url>https://repo.papermc.io/repository/maven-public/</url>
        </repository>
        <repository>
            <id>purpur</id>
            <url>https://repo.purpurmc.org/snapshots</url>
        </repository>
    </repositories>

    <dependencies>
        <!--      <dependency>-->
        <!--          <groupId>org.spigotmc</groupId>-->
        <!--          <artifactId>spigot-api</artifactId>-->
        <!--          <version>1.21-R0.1-SNAPSHOT</version>-->
        <!--          <scope>provided</scope>-->
        <!--      </dependency>-->
        <dependency>
            <groupId>com.comphenix.protocol</groupId>
            <artifactId>ProtocolLib</artifactId>
            <version>5.0.0</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>io.papermc.paper</groupId>
            <artifactId>paper-api</artifactId>
            <version>1.21.1-R0.1-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.purpurmc.purpur</groupId>
            <artifactId>purpur-api</artifactId>
            <version>1.21.4-R0.1-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.nms</groupId>
            <artifactId>spigot-api</artifactId>
            <version>1.21-R0.1-SNAPSHOT</version>
            <scope>system</scope>
            <systemPath>D:\David\MC\server\itself\1.20.1minigame\mw_test\versions\1.21\purpur-1.21.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>org.tractorcompass</groupId>
            <artifactId>spigot-api</artifactId>
            <version>1.21-R0.1-SNAPSHOT</version>
            <scope>system</scope>
            <systemPath>D:\David\Java_Code\WIP\TractorCompass\target\TractorCompass-1.0-SNAPSHOT.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>org.ajls</groupId>
            <artifactId>lib</artifactId>
            <version>1.0-SNAPSHOT</version>
            <scope>system</scope>
<!--            <systemPath>D:/David/Java_Code/WIP/Lib/target/lib-1.0-SNAPSHOT.jar</systemPath>-->
            <systemPath>D:\David\MC\server\itself\1.20.1minigame\mw_test\plugins\lib.jar</systemPath>
        </dependency>
    </dependencies>
</project>